Twitterカード記述

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
   <link rel="stylesheet" href="style.css">
   <title>SocialTech</title>
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@minori_kamizato">
+  <meta property="og:url" content="https://riho-ueno.github.io/new-socialtech/">
+  <meta property="og:title" content="ページのタイトル">
+  <meta property="og:description" content="ページの説明文">
+  <meta property="og:image" content="https://riho-ueno.github.io/new-socialtech/images/index/index-main.png">
+
 </head>
   <body>
   <!-- ヘッダー -->
@@ -44,6 +51,12 @@
 <a href="https://www.youtube.com/channel/UCCFOQO5aDK0xXam4cUQXT8g"><img src="images/button-youtube.png" alt="YouTubeのリンク"></a>
       </div>
     </nav>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@minori_kamizato">
+    <meta property="og:url" content="https://riho-ueno.github.io/new-socialtech/">
+    <meta property="og:title" content="socialtech">
+    <meta property="og:description" content="ページの説明文">
+    <meta property="og:image" content="	http://127.0.0.1:5500/images/index/index-main.png">
    </header>
    <main>
     <article>
